fix: handle overflow in latex containers

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -172,6 +172,10 @@ hr {
   background-color: rgba(var(--white), 0.25);
 }
 
+.MathJax {
+  overflow-x: auto;
+}
+
 .MathJax svg {
   font-size: 1.2em;
 }
